--- a/data/hero.yml
+++ b/data/hero.yml
@@ -7,6 +7,6 @@ content: >
   Entrust your project or task to the real specialist who will do it at the highest level and on time
 buttonName: Contact me
 buttonURL: contact
-image: images/hero/hero.png
+image: images/hero/hero.jpg
 videoThumb: images/hero/popup-thumb.png
 videoURL: https://www.youtube.com/watch?v=dQw4w9WgXcQ
