--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -4,17 +4,15 @@ topTitle: About
 title: >
   ## About me
 
-  Enjoy team diversity and increase their networks among others people in
-  various fields by provided.
+  I am studying for a master’s degree in Innopolis University, Russia. The main major of mine is in Robotics and Mechatronics.
 content: >
-  ### I design and build ultimate things.
+  ### I program and design robotics systems.
 
-  I love to work in User Experience & User Interface designing. Because I love
-  to solve the design problem and find easy and better solutions to solve it. I always
-  try my best to make good user interface with the best user experience. I have been
-  working as a Visual designer from.
+  I love to work in Robotics & Mechatronics sphere. Since childhood I have loved to assemble schemes and program them to do the staff I want. I always try to do my best to find most fitable and easy-to-implement solution.
+
+  But robotics is not only one sphere I work in. Also, I program telegram bots, do some universities and olympiad tasks, e.t.c. 
 button1Name: Hire me
 button2Name: Download CV
 button1Target: contact
-button2Target: contact
+button2Target: https://drive.google.com/uc?export=download&id=1sLI1PcuXUykGJruWCsF0lInMuZuAmRVe
 image: images/about/about-img.jpg
