--- a/data/hero.yml
+++ b/data/hero.yml
@@ -8,5 +8,5 @@ content: >
 buttonName: Contact me
 buttonURL: contact
 image: images/hero/hero.jpg
-videoThumb: images/hero/popup-thumb.png
-videoURL: https://www.youtube.com/watch?v=dQw4w9WgXcQ
+# videoThumb: images/hero/popup-thumb.png
+# videoURL: https://www.youtube.com/watch?v=dQw4w9WgXcQ
