--- a/data/blogSection.yml
+++ b/data/blogSection.yml
@@ -4,6 +4,6 @@ topTitle: Blog
 title: >
   ## Recent Article
 
-  Enjoy team diversity and increase their networks among others people in various fields by provided.
+  View my last posts in blog
 
 buttonTarget: blog
