--- a/data/hero.yml
+++ b/data/hero.yml
@@ -4,7 +4,7 @@ topTitle: Hello, I am Ilya Sevostyanov
 content: >
   # I am here to help you with Robotics & IT
 
-  Entrust your project or task to the real specialist who will do it at the highest level and on time
+  Entrust your project or a task to the real specialist who will do it at the highest level and on time
 buttonName: Contact me
 buttonURL: contact
 image: images/hero/hero.jpg
