--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -4,10 +4,12 @@ topTitle: My Resume
 title: >
   ## My Expertises
 
-  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore  
+  Under Education button you can see the universities, some courses I graduated. 
+  
+
+  Under "Experiences" button you can find list of jobs and big projects, competitions I was involved in.  
 
 
-  Magna aliquyam erat, sed diam voluptua. At vero eos accusam justo.
 tab1Name: Education
 tab2Name: Experiences
 tab1Target: education
@@ -15,44 +17,54 @@ tab2Target: experience
 
 education:
   - content: >
-      #### Master in Arts
+      #### Bachelor in Mechatronics and Robotics
 
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2008-2010
+      Graduated Bauman Moscow State Technical University. Thesis project was dedicated to the development and control of a vertical walking three-link robot
+
+      ###### Achievements: 
+
+      * The best student of the robotics department (2018)
+
+    time: 2015-2019
   - content: >
-      #### Master in Arts
+      #### Master in Computer Science
 
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2008-2010
-  - content: >
-      #### Master in Arts
-
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2008-2010
-  - content: >
-      #### Master in Arts
-
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2008-2010
+      Graduate Innopolis University. The track is Robotics. Thesis project is dedicated to the dynamic walking of quadruped robot
+    time: 2019-2021
 
 experience:
   - content: >
-      #### Umbrella co. 
+      #### JBL Robotics
+      
+      ###### Engineering Assistant
 
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2016-Present
+      * Developed ROS nodes to control the robot barista
+
+      * Designed the stands for cups and the gripper for the robot itself
+    time: 2018-2019
+
   - content: >
-      #### Aperture Science 
+      #### Innopolis University Robotics Lab
+      
+      ###### Intern
 
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2010-2016
+      * Developed computer vision for UR10 manipulator in order to get ping-pong ball position using RealSense D435i w.r.t. the robot base.
+
+    time: 2019, jun - 2020, sep
+
   - content: >
-      #### ACME Inc. 
+      #### Aerobot 2020 Competition
+      
+      ###### Computer Vision
 
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2005-2010
-  - content: >
-      #### LexCorp 
+      "Racoon Lab" team. 
 
-      Lorem ipsum dolor sit amet conset sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-    time: 2001-2005
+      * Developed ROS node so drone could follow the line on the ground
+
+      * Designed ROS node so drone could alocate the landing site and remember it in order to return back after completing the mission
+
+      ###### Achievements: 
+      
+      * Winning a competition
+
+    time: 2019, oct - 2020, nov
