--- a/data/skillSection.yml
+++ b/data/skillSection.yml
@@ -4,14 +4,26 @@ topTitle: My Skills
 content: >
   ## Why hire me for your next project?
 
-  My goal is to build a strong supportive professional network among all freelancers and startups in order to improve their performance.
+  My goal is to build the professional and easy-to-implement project. Below you can see the main list of my hard skills
 
 image: images/skill/skill_image.png
 
 skill:
-  - title: HTML
-    percent: 69
-  - title: CSS
+  - title: ROS
+    percent: 70
+  - title: Git
+    percent: 80
+  - title: Python
+    percent: 80
+  - title: MATLAB
+    percent: 70  
+  - title: C++
     percent: 60
-  - title: Javascript
-    percent: 85
+  - title: C
+    percent: 50  
+
+  - title: CAD Systems (Solidworks, Compas 3D)
+    percent: 65 
+
+  - title: TeX
+    percent: 80
