--- a/config.toml
+++ b/config.toml
@@ -36,20 +36,20 @@ weight = 7
 # Sitemap Menu
 [[menu.sitemap]]
 name = "About me"
-url = "about"
+url = "#about"
 weight = 1
-[[menu.sitemap]]
-name = "Frequently Ask Question"
-url = "#"
-weight = 2
-[[menu.sitemap]]
-name = "Privacy & Policy"
-url = "#"
-weight = 3
+#[[menu.sitemap]]
+#name = "Frequently Ask Question"
+#url = "#"
+#weight = 2
+#[[menu.sitemap]]
+#name = "Privacy & Policy"
+#url = "#"
+#weight = 3
 [[menu.sitemap]]
 name = "Latest Article"
-url = "#"
-weight = 4
+url = "#blog"
+weight = 2
 
 [params]
 blogPageURL = "blog"
@@ -62,7 +62,7 @@ logo = "images/site-navigation/logo.png"
 
 [params.address]
 address = "420500 Innopolis, Russia."
-email = "sevocrear@gmail.com"
+email = "hello@example.com"
 openingHours = "Open from 10am to 6pm"
 phone = "+7 (985) 095 27 27"
 
