added formspree functionality

--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ blogPageURL = "blog"
 contactLink = "contact"
 copyright = "All right reserved copyright © Portio 2020"
 footerLogo = "images/contact/widget-logo.png"
-formspreeURL = "YOUR FORMSPREE URL"
+formspreeURL = "https://formspree.io/f/mzbkkzbe"
 googleAnalytics = "G-RZPCD5E5NB"
 logo = "images/site-navigation/logo.png"
 
