--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -4,13 +4,13 @@ enable: true
 title: >
   ## About me
 
-  I am studying for a master’s degree in Innopolis University, Russia. The main major of mine is in Robotics and Mechatronics.
+  Right now I am studying for a master’s degree in Innopolis University, Russia. I specialize in Robotics and Mechatronics.
 content: >
   ### I program and design robotics systems.
 
-  I love to work in Robotics & Mechatronics sphere. Since childhood I have loved to assemble schemes and program them to do the staff I want. I always try to do my best to find most fitable and easy-to-implement solution.
+  Since childhood I have loved to assemble schemes and program them to do the staff I want. And I always try to do my best to find most fitable and easy-to-implement solution.
 
-  But robotics is not only one sphere I work in. Also, I program telegram bots, do some universities and olympiad tasks, e.t.c. 
+  But robotics is not only one sphere I work in. Also, I program telegram bots, do some university and olympiad tasks, e.t.c. 
 button1Name: Hire me
 button2Name: Download CV
 button1Target: contact
