--- a/data/aboutSection/en/aboutSection.yml
+++ b/data/aboutSection/en/aboutSection.yml
@@ -15,4 +15,4 @@ button1Name: Hire me
 button2Name: Download CV
 button1Target: en/contact
 button2Target: en/files/CV/main.pdf
-image: en/images/about/about-img.png
+image: images/about/about-img.png
