--- a/data/hero/en/hero.yml
+++ b/data/hero/en/hero.yml
@@ -7,6 +7,6 @@ content: >
   Entrust your project or task to the real specialist who will do it at the highest level and on time
 buttonName: Contact me
 buttonURL: en/contact
-image: en/images/hero/hero.jpg
+image: images/hero/hero.jpg
 # videoThumb: images/hero/popup-thumb.png
 # videoURL: https://www.youtube.com/watch?v=dQw4w9WgXcQ
