--- a/data/skillSection/ru/skillSection.yml
+++ b/data/skillSection/ru/skillSection.yml
@@ -2,7 +2,7 @@
 enable: true
 topTitle: Мои Навыки
 content: >
-  ## Зачем нанимать именно меня для Вашего проекта?
+  ## Почему Именно Я?
 
   
   Моя цель - построить профессиональный и качественный продукт. Ниже вы можете увидеть основной список моих навыков
