--- a/data/testimonialSection/ru/testimonialSection.yml
+++ b/data/testimonialSection/ru/testimonialSection.yml
@@ -6,7 +6,7 @@ title: >
 
 testimonial:
   - name: Владимир
-    comment: Dсе получилось в сроки, каждую программу объяснил и расписал, все на высшем уровне.
+    comment: Все получилось в сроки, каждую программу объяснил и расписал, все на высшем уровне.
     time: Дек 19, 2020
     star: 5
   - name: Иван
