added blog post

--- a/data/skillSection/ru/skillSection.yml
+++ b/data/skillSection/ru/skillSection.yml
@@ -19,11 +19,11 @@ skill:
   - title: MATLAB
     percent: 70  
   - title: C++
-    percent: 60
+    percent: 50
   - title: C
-    percent: 50  
+    percent: 60  
 
-  - title: САПР (Solidworks, Compas 3D)
+  - title: САПР (Solidworks, КОМПАС 3D)
     percent: 65 
 
   - title: TeX
