--- a/data/resumeSection/en/resumeSection.yml
+++ b/data/resumeSection/en/resumeSection.yml
@@ -30,6 +30,10 @@ education:
       #### Master in Computer Science
 
       Graduating Innopolis University. Thesis project is dedicated to the dynamic walking of quadruped robot
+
+      ###### Achievements: 
+
+      * [Diploma for excellent academic achievements in Autumn and Spring Semesters in 2020 year](../../../en/files/inno_diploma_excellent_academic.jpg)
     time: 2019-2021
 
 experience:
