--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -33,6 +33,10 @@ education:
       
       Оканчиваю в 2021 г. Университет Иннополис. Дипломная работа посвящена динамической ходьбе четвероногого робота.
 
+      ###### Достижение: 
+
+      * [Диплом за отличную успеваемость в осеннем и весеннем семестрах 2020 года](../../../ru/files/inno_diploma_excellent_academic.jpg)
+
     time: 2019-2021
 
 experience:
