--- a/data/resumeSection/en/resumeSection.yml
+++ b/data/resumeSection/en/resumeSection.yml
@@ -54,6 +54,8 @@ experience:
 
       * Developed computer vision for UR10 manipulator in order to get ping-pong ball position using RealSense D435i w.r.t. the robot base.
 
+
+      * [Feedback and recommendations from supervisor](../../../ru/files/Igor_Gaponov_Recommendation_en.pdf)
     time: 2019, jun - 2020, sep
 
   - content: >
