--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -58,6 +58,8 @@ experience:
 
       * Разработал компьютерное зрение для манипулятора UR10, чтобы определять положение мяча для настольного тенниса с помощью RealSense D435i по отношению к базе робота.
 
+      * [Отзыв и рекомендации от руководителя](../../../ru/files/Igor_Gaponov_Recommendation_ru.pdf)
+
     time: 2019, июн - 2020, сен
 
   - content: >
