--- a/data/skillSection/ru/skillSection.yml
+++ b/data/skillSection/ru/skillSection.yml
@@ -25,6 +25,9 @@ skill:
 
   - title: CAD Systems (Solidworks, Compas 3D)
     percent: 80
+  
+  - title: OpenCV
+    percent: 70
 
   - title: TeX
     percent: 80
